# auris-vive

./: .gitignore  CLAUDE.md  Makefile  PITCH-NOTES.md  README.md  TASK-analyse.md  TASK-garden-v2.md  TASK-garden-v3.md  TASK-garden.md  TASK-pitch.md  TASK-proto.md  TASK.md  VISION.md  conftest.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: pages.yml
auris_vive.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
brand/: README.md  identity.html  palette.md  typography.md  voice.md
docs/proto/: README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/proto/src/: audio.ts  ccOverlay.ts  curvePlayer.ts  main.ts  palette.ts  renderer.ts  sceneManager.ts  types.ts  utils.ts
engineering/: PROJECT-CONTEXT.md  README.md
engineering/decisions/: ADR-001-stack.md  ADR-002-inference-backend.md  ADR-003-drum-transcription.md  ADR-006-client-integration.md
engineering/design/: SDD-001-pipeline-overview.html  SDD-002-ingest-stage.md  SDD-003-separate-stage.md  SDD-008-analyse-stage.md  SDD-009-visual-prototype.md  SDD-010-garden-scene.md
scripts/: export-curves.py  grab-clip.sh  pipeline-ui.py  refresh-reports.sh  run-analyse.sh  run-ingest.sh  run-separate.sh  run-stems.sh  test-all.sh  test-base.sh  test-ml.sh  transcribe-vocals.sh
src/: README.md  __init__.py
src/adapters/: __init__.py  base.py  device.py  file.py  stream.py  url.py
src/api/: __init__.py  job_queue.py  main.py
src/api/routes/: health.py  jobs.py
src/pipeline/: __init__.py  ingest.py  outputs.py  runner.py  separate.py  transcribe.py
test_audio/: songs.json
test_audio/acdc/: report.txt
test_audio/billy-joel/: report.txt  transcript.json
test_audio/crystal-method/: report.txt  transcript.json
test_audio/finger-eleven/: report.txt
test_audio/grouplove/: report.txt  transcript.json
test_audio/kendrick/: report.txt
test_audio/love-and-rockets/: report.txt
test_audio/metallica/: report.txt  transcript.json
test_audio/noah-kahan/: report.txt
test_audio/noah-kahan-porchlight/: report.txt  transcript.json
test_audio/noah-kahan-stick-season/: report.txt
test_audio/teddy-swims/: report.txt
test_audio/trombone-shorty/: report.txt
test_audio/tswift/: report.txt
tests/adapters/: test_file.py
tests/api/: test_health.py
tests/pipeline/: test_analyse.py  test_drums.py  test_ingest.py  test_outputs.py  test_runner.py  test_separate.py  test_transcribe.py
(+623 files in other folders)
